# linux_hw

./: CMakeLists.txt  Makefile  README.md  a.out  ipc.cpp  ipc.h  linux_hw  main.cpp  nouse  tunnel.cpp  tunnel.h  use
Linux-xmu-AI/: README.md  配置说明.txt
Linux-xmu-AI/测试文件/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
Linux-xmu-AI/源代码/: car.cpp  main.cpp  my_ipc.cpp  tunnel.cpp
include/: Car.h  Tunnel.h  ipc.h  logger.h  mailbox.h  mp.h  process.cpp  process.h  txt_reader.h
input/: h1.txt  h2.txt  h3.txt  m1.txt  m2.txt  m3.txt  test.txt  test1.txt  test2.txt
input/hard/: h1.txt  h2.txt
input/middle/: m1.txt  m2.txt  m3.txt
input/simple/: s1.txt  s2.txt  s3.txt
linux-car/: README.md  config.txt  makefile  program
linux-car/input/: test.txt  test1.txt  test2.txt
linux-car/src/: car.cpp  car.h  main.cpp  makefile  syn.cpp  syn.h  test  tunnel.cpp  tunnel.h
linux-ipc-wrappers/: LICENSE  Makefile  Message.c  Message.h  MessageQueueWrapper.c  MessageQueueWrapper.h  README.md  SemaphoreWrapper.c  SemaphoreWrapper.h  SerialWrapper.c  SerialWrapper.h  SharedMemoryWrapper.c  SharedMemoryWrapper.h  SocketWrapper.c  SocketWrapper.h  TimerWrapper.c  TimerWrapper.h
linux-ipc-wrappers/examples/: MessageQueueWrapperTest.c  SemaphoreWrapperTest.c  SerialWrapperTest.c  SharedMemoryWrapperTest.c  SocketWrapperTest.c
src/: Car.cpp  Tunnel.cpp  ipc.cpp  logger.cpp  mailbox.cpp  main.cpp  mp.cpp  process.cpp  test.cpp  txt_reader.cpp
